升级构建工具，完善网络

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
                  android:allowBackup="false"
                  android:debuggable="true"
                  android:supportsRtl="false"
+                 android:networkSecurityConfig="@xml/network_security_config"
                  tools:ignore="HardcodedDebugMode">
 
         <activity android:name="ConnectActivity"
