--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,6 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'org.webrtc:google-webrtc:1.0.+'
 }
