--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'org.webrtc:google-webrtc:1.0.+'
+    implementation 'commons-io:commons-io:2.11.0'
 }
