--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'org.webrtc:google-webrtc:1.0.+'
     implementation 'commons-io:commons-io:2.11.0'
+
+    testImplementation 'junit:junit:4.12'
 }
